--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div class="todo-list">
         <div class="header">
-                <input type="text" name="" id="task"  class="task" autocomplete="off">
+                <input type="text" name="" id="task"  class="task" autocomplete="off" placeholder="Enter Task Name ">
                 <button class="btn btn-primary Add-task" >Add</button>
         </div>
         <div class="tasks">
